# floodit

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
floodit/: __main__.py  datastruct.py  event.py  fill.py  floodit.py  ui.py
floodit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
